# tenant-evals-integration

./: .env.example  README.md  SAMPLE_APP_README.md  main.py  pyproject.toml  sample_app.py
src/evals_cli/: __init__.py  api.py  config.py  main.py
